--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 sm:gap-12 items-center"><!-- Professional Photo - Larger Size -->
       <div class="flex justify-center fade-in-left">
        <div class="profile-photo w-64 h-64 sm:w-80 sm:h-80 md:w-96 md:h-96 lg:w-[450px] lg:h-[450px] floating-animation"><img src="https://media.licdn.com/dms/image/v2/D5603AQEMd4Rm53__OA/profile-displayphoto-crop_800_800/B56ZlT0AcdIsAI-/0/1758047767297?e=1769040000&v=beta&t=_j5_YxDqfl5WFE7mUcHJcRkWURuWFcFLR14IOG2j384" alt="Harivarshan K A - Designer &amp; Engineer" class="w-full h-full object-cover" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"> <!-- Elegant fallback with initials -->
-     <!--   <div class="w-full h-full bg-gradient-to-br from-gray-700 via-gray-800 to-black flex items-center justify-center" style="display: none;"><span style="font-family: 'Orbitron', sans-serif; font-size: 6rem; font-weight: 900; letter-spacing: 0.1em; color: #ffffff;">HK</span> -->
+      <div class="w-full h-full bg-gradient-to-br from-gray-700 via-gray-800 to-black flex items-center justify-center" style="display: none;"><span style="font-family: 'Orbitron', sans-serif; font-size: 6rem; font-weight: 900; letter-spacing: 0.1em; color: #ffffff;">HK</span>
         </div>
        </div>
       </div><!-- About Text and Sliding Banner -->
@@ -1742,6 +1742,7 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b90c448f6b479e0',t:'MTc2NzU5Mjk0Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
