--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg></button>
     </div><!-- Mobile Menu -->
-    <div class="mobile-menu" id="mobileMenu"><a href="#home" class="hover:text-gray-400 transition-colors mobile-link">Home</a> <a href="#about" class="hover:text-gray-400 transition-colors mobile-link">About</a> <a href="#services" class="hover:text-gray-400 transition-colors mobile-link">Background</a> <a href="#experience" class="hover:text-gray-400 transition-colors mobile-link">Experience</a> <a href="#portfolio" class="hover:text-gray-400 transition-colors mobile-link">Portfolio</a> <a href="#achievements" class="hover:text-gray-400 transition-colors mobile-link">Achievements</a> <a href="#contact" class="hover:text-gray-400 transition-colors mobile-link">Contact</a>
+    <div class="mobile-menu" id="mobileMenu"><a href="#home" class="hover:text-gray-400 transition-colors mobile-link">Home</a> <a href="#about" class="hover:text-gray-400 transition-colors mobile-link">About</a> <a href="#services" class="hover:text-gray-400 transition-colors mobile-link">Background</a> <a href="#experience" class="hover:text-gray-400 transition-colors mobile-link">Experience</a> <a href="#portfolio" class="hover:text-gray-400 transition-colors mobile-link">Portfolio</a> <a href="#achievements" class="hover:text-gray-400 transition-colors mobile-link">Achievements</a>
    </nav>
    
  <!-- Hero Section -->
@@ -1786,6 +1786,7 @@ Combines branding, editing, and presentation skills to deliver impactful and eng
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b90c448f6b479e0',t:'MTc2NzU5Mjk0Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
